--- a/RegEx.ipynb
+++ b/RegEx.ipynb
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "id": "cde7efb3-2c48-4c4d-8077-6a7862b75d8e",
    "metadata": {},
    "outputs": [
@@ -453,34 +453,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saa$s\n",
-      "2\n",
-      "asd8s\n",
-      "1\n",
-      "4asfa\n",
-      "1\n",
-      "@acc\n",
-      "1\n",
-      "sadacf@sa\n",
-      "2\n"
+      "%jns: syntax error\n",
+      "saa%s: syntax error\n",
+      "_shds: OK\n",
+      "as_fa: OK\n",
+      "Shammi: OK\n",
+      "Arosh73: OK\n",
+      "73jh: syntax error\n",
+      "bsja=h: syntax error\n"
      ]
     }
    ],
    "source": [
-    "docs = ['saa$s', 'asd8s', '4asfa', '@acc', 'sadacf@sa']\n",
+    "docs = ['%jns', 'saa$s', '_shds', 'as_fa', 'Shammi', 'Arosh73', '73jh', 'bsja=h']\n",
     "regExp = '[a-zA-Z_]\\w*'\n",
     "for doc in docs:\n",
-    "    print(doc)\n",
-    "    if len(re.findall(regExp,doc))==len(doc):\n",
-    "        print(doc)\n",
-    "    R =len(re.findall(regExp,doc))\n",
-    "    print(R)"
+    "    R = re.findall(regExp,doc)\n",
+    "    if len(R) == 1 and len(R[0]) == len(doc):\n",
+    "        print(doc+': OK')\n",
+    "    else:\n",
+    "        print(doc+': syntax error')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a39527-15d0-4307-9eff-33f64a86746b",
+   "id": "1afbd3c0-ccd5-4de8-9534-264a676b8fa7",
    "metadata": {},
    "outputs": [],
    "source": []
