--- a/RegEx.ipynb
+++ b/RegEx.ipynb
@@ -55,29 +55,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "da08b43f-ba86-4026-a4df-8d741ee11a36",
+   "cell_type": "markdown",
+   "id": "fba08eee-4886-4e7a-bf33-12d004c5bf60",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'a', 'b', 'c', 'b', 'c', 'b', 'a']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "re.findall('[a-c]', 'vavdabcvyuytfdbxokcb;sfa')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "84a61d52-745b-4f0f-a80c-33ba522b0090",
    "metadata": {},
    "outputs": [
@@ -87,7 +74,7 @@
        "14"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6b685fc2-d362-4e4e-bf31-fde7cfa80378",
    "metadata": {},
    "outputs": [
@@ -118,7 +105,7 @@
        "['8649', '7894']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d5c620ee-bb4a-4108-96e7-d7e82a5b0c2d",
    "metadata": {},
    "outputs": [
@@ -149,7 +136,7 @@
        "['j', 'h', 's', 'u', 'g', 'f', 'u', 's', 'y']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "aa959c2c-4867-4c36-afbb-98a5def234b6",
    "metadata": {},
    "outputs": [
@@ -171,7 +158,7 @@
        "['a', 'b', 'a', 'a', 'c', 'b', 'a']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "952d9a74-412f-4053-b528-1226f049f5aa",
    "metadata": {},
    "outputs": [
@@ -213,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "904a8baf-3edb-4256-962f-fb744203434c",
    "metadata": {},
    "outputs": [
@@ -249,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3a53b2b6-c241-41a4-8107-1a895af738ee",
    "metadata": {},
    "outputs": [
@@ -259,7 +246,7 @@
        "4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "82664d9d-0c9a-4b30-a374-02e53b57ac8b",
    "metadata": {},
    "outputs": [
@@ -281,7 +268,7 @@
        "7"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "45ba8b99-9f3a-4319-b26e-f0a7c4a2118f",
    "metadata": {},
    "outputs": [
@@ -303,7 +290,7 @@
        "9"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "9bbd5a18-b212-475d-9648-e4fb1afd72b3",
    "metadata": {},
    "outputs": [
@@ -344,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a05d5e07-2747-41a1-a986-35c850acf1f1",
    "metadata": {},
    "outputs": [
@@ -364,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b66557b1-0758-4d78-92c6-ce3fd3b8c79b",
    "metadata": {},
    "outputs": [
@@ -391,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "17a0ddd1-8cb7-4475-88d3-ced6a7e1bed3",
    "metadata": {},
    "outputs": [
@@ -412,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "8c86e5fd-bb85-411f-bafc-5cfde4c05465",
    "metadata": {},
    "outputs": [
@@ -445,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "id": "cde7efb3-2c48-4c4d-8077-6a7862b75d8e",
    "metadata": {},
    "outputs": [
@@ -485,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "1afbd3c0-ccd5-4de8-9534-264a676b8fa7",
    "metadata": {},
    "outputs": [
@@ -525,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "id": "176ef6fd-e15c-4200-af83-7675706bacfd",
    "metadata": {},
    "outputs": [
@@ -558,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "id": "77174982-7cc6-4cb6-9080-78e8f94cfdde",
    "metadata": {},
    "outputs": [
@@ -566,13 +553,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Yahooo', 'Yahooooooo', 'Yahooooo']\n"
+      "['2Yahoo', '3Yahooo', '4Yahoooo', '5Yahooooo', '6Yahoooooo', '7Yahooooooo']\n"
      ]
     }
    ],
    "source": [
-    "doc = 'YahooYahoooYahoooooooYahoooooYahoasdfl;akj;lYahoaYahaoo'\n",
-    "regExp = 'Yahooo+'\n",
+    "doc = '0Yah1Yaho2Yahoo3Yahooo4Yahoooo5Yahooooo6Yahoooooo7Yahooooooo'\n",
+    "regExp = '\\dYahoo+'\n",
     "rs = re.findall(regExp,doc)\n",
     "print(rs)"
    ]
@@ -587,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "id": "b8ff3d12-117f-4618-a9ab-cd0c2739510a",
    "metadata": {},
    "outputs": [
@@ -621,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "id": "e8fb65ed-59e4-4a69-9088-27c03d0581e4",
    "metadata": {},
    "outputs": [
@@ -629,13 +616,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1Yah', '2Yaho', '3Yaho', '4Yaho', '6Yaho', '7Yaho']\n"
+      "['1Yah', '2Yaho', '3Yaho', '4Yaho', '5Yaho', '6Yaho', '7Yaho']\n"
      ]
     }
    ],
    "source": [
-    "doc = '1Yah2Yaho3Yahoo4YahoooY5ahoooo6Yahooooo7Yaho'\n",
+    "doc = '1Yah2Yaho3Yahoo4Yahooo5Yahoooo6Yahooooo7Yaho'\n",
     "regExp = '\\dYaho?'\n",
+    "rs = re.findall(regExp,doc)\n",
+    "print(rs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4055e8a-3fe9-443a-854c-01ad9ec7ee76",
+   "metadata": {},
+   "source": [
+    "# {m,n} (Repeat m to n times) **Do not use {m, n} (No Space after the comma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "082ec14a-fc12-4a0c-9d9f-36b4b872366e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2Yahoo', '3Yahooo', '4Yahoooo', '5Yahoooo', '6Yahoooo', '7Yahoooo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = '0Yah1Yaho2Yahoo3Yahooo4Yahoooo5Yahooooo6Yahoooooo7Yahooooooo'\n",
+    "regEx = '\\dYaho{2,4}'\n",
+    "rs = re.findall(regEx,doc)\n",
+    "print(rs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "28eca05c-0a90-4bb3-936d-f6107fc6e45b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b74', 'c523', 'd5678', 'e5789', 'f8793']\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = ('asdfj;a3laieo2rkdjf;alib74ejr;akjdfc523k4j;lajds;l'\n",
+    "            'asdfjoqweitu  lad;ai@weuta    dg;lajoetiuaodkgjier'\n",
+    "            'asdkfjqoitlskdnfoqwiekhas;ioew=adgoie'\n",
+    "            'askdfl_asdkfei_asd567890jkfla****aske57894asfff'\n",
+    "            '{{{{{asdf879314jowei@@##askdfoie}}}}}')\n",
+    "regExp = '\\D\\d{2,4}'\n",
     "rs = re.findall(regExp,doc)\n",
     "print(rs)"
    ]
@@ -643,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c30479a-bae7-4989-8ac0-4508f8d2cf00",
+   "id": "2e57dcb7-788e-4e91-ae4a-355a9ad5a4db",
    "metadata": {},
    "outputs": [],
    "source": []
