match and search continues

--- a/RegEx.ipynb
+++ b/RegEx.ipynb
@@ -682,9 +682,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc9f3fec-d08e-488e-919b-40e63b16708e",
+   "metadata": {},
+   "source": [
+    "# Pattrn Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "2e57dcb7-788e-4e91-ae4a-355a9ad5a4db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a2347345B', 'Ab']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = re.compile('a\\d*b',re.IGNORECASE)\n",
+    "p.findall('a2347345B23456Ab')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2c6d27e-1833-49a3-bafc-1a3dc79f0c4a",
+   "metadata": {},
+   "source": [
+    "# match() and search()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "4e5cc67a-a5a6-4d2b-a127-e699a9385bdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 17) 0 17 17\n",
+      "how are you today ... a;a4o3\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = '      \\t    \\t   \\t how are you today ... a;a4o3'\n",
+    "p = re.compile('\\s*')\n",
+    "m = p.match(doc)\n",
+    "print(m.span(), m.start(), m.end(), len(m.group()))\n",
+    "print(doc[m.end():])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3cf1df96-404f-4d27-886a-20bf23fa664e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 9) 3 9 6\n",
+      "are you today ... a;a4o3\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = 'how   \\t  are you today ... a;a4o3'\n",
+    "p = re.compile('\\s+')\n",
+    "m = p.search(doc)\n",
+    "print(m.span(), m.start(), m.end(), len(m.group()))\n",
+    "print(doc[m.end():])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e57dcb7-788e-4e91-ae4a-355a9ad5a4db",
+   "id": "2ab979da-5f27-487e-8ce1-2b57a6fe1bce",
    "metadata": {},
    "outputs": [],
    "source": []
