--- a/TextPreProcessing.ipynb
+++ b/TextPreProcessing.ipynb
@@ -61,6 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "import spacy\n",
     "import re\n",
     "nlp = spacy.load('en_core_web_sm')"
@@ -162,8 +164,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8897cee1-4be0-4f77-ab0e-f5b1c496cc3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n",
+      "always\n",
+      "uh\n",
+      "do\n",
+      "the\n",
+      "main\n",
+      "um\n",
+      "processing\n",
+      "I\n",
+      "mean\n",
+      "the\n",
+      "uh\n",
+      "um\n",
+      "data\n",
+      "processing\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using RegEx**\n",
+    "\n",
+    "for token in re.split('\\W+',doc):\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2e9e9f03-9fb2-4f5e-b92e-a047da03caaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U\n",
+      "K\n",
+      "has\n",
+      "a\n",
+      "reasonable\n",
+      "population\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in re.split('\\W+',doc2):\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a339ab1f-440c-4d7e-889f-d7a6fef43e9e",
    "metadata": {},
    "outputs": [],
    "source": []
