functions for token adding

--- a/TextPreProcessing.ipynb
+++ b/TextPreProcessing.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "8897cee1-4be0-4f77-ab0e-f5b1c496cc3f",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "2e9e9f03-9fb2-4f5e-b92e-a047da03caaf",
    "metadata": {},
    "outputs": [
@@ -223,9 +223,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22ee169c-cc8d-41e7-9940-22b121c35bfd",
+   "metadata": {},
+   "source": [
+    "# Sentiment Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a339ab1f-440c-4d7e-889f-d7a6fef43e9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84780"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = list(nlp.vocab.strings)\n",
+    "len(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5bcf6c7c-57ee-4b03-9822-73a258838a73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Arguably'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L[7300]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ac5a6e60-2759-4f5f-92b6-39e01214de7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# L"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a339ab1f-440c-4d7e-889f-d7a6fef43e9e",
+   "id": "1d27813e-c537-4a90-aeed-d98a479acb93",
    "metadata": {},
    "outputs": [],
    "source": []
