vocabulary built from df

--- a/Review Analysis.ipynb
+++ b/Review Analysis.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "d06a2a5d-ee01-4300-94b5-efcbb6352072",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "7f613f2b-d284-447e-a4b3-16b9b2ecc013",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "60d5bf99-559a-4597-9d11-fb19f85de5d0",
    "metadata": {},
    "outputs": [],
@@ -226,59 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "e70b7b44-2dcd-4141-b27f-5bbafebfcc10",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'t_2_i': {'<UNK>': 0},\n",
-       " 'i_2_t': {0: '<UNK>'},\n",
-       " 'unkToken': '<UNK>',\n",
-       " 'unkTokenIdx': 0}"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "initializeVocabulary()\n",
-    "vocab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "fc9977db-2542-44e6-84d9-f1df45600af5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'t_2_i': {'<UNK>': 0, 'Shammi': 1, 'Arosh': 2, 'Shatin': 3},\n",
-       " 'i_2_t': {0: '<UNK>', 1: 'Shammi', 2: 'Arosh', 3: 'Shatin'},\n",
-       " 'unkToken': '<UNK>',\n",
-       " 'unkTokenIdx': 0}"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "addToken('Shammi')\n",
-    "addToken('Arosh')\n",
-    "addToken('Shatin')\n",
-    "vocab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "f612710d-6878-4b11-b814-129b666f3fdd",
    "metadata": {},
    "outputs": [],
@@ -290,28 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "c1cff057-adc1-4f44-9785-50b5575c8148",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lookUpToken('Arosh')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "id": "10ffa2c6-ae61-4783-83ce-e12d66254e31",
    "metadata": {},
    "outputs": [],
@@ -325,31 +252,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "d4304534-dfed-4114-b020-fda7bd6495ff",
+   "execution_count": 14,
+   "id": "27c840f0-d61b-4058-bb9e-77a2931463bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initializeVocabulary()\n",
+    "# vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9e601c3b-817a-465d-9431-809a0087a52d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# addToken('Shammi')\n",
+    "# addManyTokens(['Arosh', 'Shatin'])\n",
+    "# vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e55394c4-f9ea-4d55-b14d-4bc7b9d68296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lookUpToken('Arosh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d73b11fa-32a5-4685-930e-ae2bf282bb83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lookUpIndex(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "479d3f0b-425f-4e6a-b8b1-978ef038e4db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vocabularyFromDataFrame(df, cutoff = 25):\n",
+    "    initializeVocabulary()\n",
+    "    wordCounts = Counter()\n",
+    "    for r in df.review:\n",
+    "        for word in re.split('\\W+', r):\n",
+    "            wordCounts[word] += 1\n",
+    "    for word, count in wordCounts.items():\n",
+    "        if count > cutoff:\n",
+    "            addToken(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dd696842-aab0-4c5b-a67e-231c01727662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocabularyFromDataFrame(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0bc99074-0420-4886-b842-fadb1133fa0f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Index 5 is not present in the vocabulary!!'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[68], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mlookUpIndex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[67], line 3\u001b[0m, in \u001b[0;36mlookUpIndex\u001b[1;34m(idx)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlookUpIndex\u001b[39m(idx):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idx \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m vocab[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mi_2_t\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m----> 3\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndex \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m is not present in the vocabulary!!\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m idx)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m vocab[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mi_2_t\u001b[39m\u001b[38;5;124m'\u001b[39m][idx]\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Index 5 is not present in the vocabulary!!'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8946\n",
+      "8946\n"
      ]
     }
    ],
    "source": [
-    "lookUpIndex(5)"
+    "# vocab\n",
+    "print(len(vocab['i_2_t']))\n",
+    "print(len(vocab['t_2_i']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fc0e4c0e-5e05-4e54-a4fd-a0eca35e50ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vocabularyFromCorpus(Corpus,cutoff=25):\n",
+    "    initializeVocabulary()\n",
+    "    wordCounts = Counter()\n",
+    "    for doc in Corpus:\n",
+    "        for word in re.split('\\W+',doc):\n",
+    "            wordCounts[word] += 1\n",
+    "    for word,count in wordCounts.items():\n",
+    "        if count > cutoff:\n",
+    "            addToken(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "025c1fc5-ac7c-4f51-942a-6f1e82100416",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Corpus = np.asarray(df['review'])\n",
+    "vocabularyFromCorpus(Corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "31a52605-531a-424b-a609-14bf73df505d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8946\n",
+      "8946\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(vocab['i_2_t']))\n",
+    "print(len(vocab['t_2_i']))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27c840f0-d61b-4058-bb9e-77a2931463bd",
+   "id": "8253cef5-32f7-4e16-9fa1-8b423f0ca2ad",
    "metadata": {},
    "outputs": [],
    "source": []
