--- a/Review Analysis.ipynb
+++ b/Review Analysis.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "fc0e4c0e-5e05-4e54-a4fd-a0eca35e50ba",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "025c1fc5-ac7c-4f51-942a-6f1e82100416",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "31a52605-531a-424b-a609-14bf73df505d",
    "metadata": {},
    "outputs": [
@@ -393,8 +393,194 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "6daa0aea-1ed3-4ede-a5bf-22443a828c73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def oneHotVector(token, N):\n",
+    "    oneHot = np.zeros((N, 1))\n",
+    "    oneHot[lookUpToken(token)] = 1\n",
+    "    return oneHot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cb1b3cad-1e6f-4760-88f4-6c9d479fd605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lookUpIndex(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "849b13ca-a66f-407d-acb3-3e6b7f097a7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       ...,\n",
+       "       [0.],\n",
+       "       [0.],\n",
+       "       [0.]], shape=(8946, 1))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = len(vocab['i_2_t'])\n",
+    "oneHotVector('terrible', N)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec9b077-5bf4-4be6-a9cd-8ad47ed5ad34",
+   "metadata": {},
+   "source": [
+    "## Compute Feature Vector for one review "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "92430c1c-89ec-4798-80bc-2e180c941dc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computeFeatures(doc, N):\n",
+    "    isFirst = True\n",
+    "    for token in doc:\n",
+    "        oneHot = oneHotVector(token, N)\n",
+    "        if isFirst:\n",
+    "            xF = oneHot\n",
+    "            isFirst = False\n",
+    "        else:\n",
+    "            xF = np.hstack((xF, oneHot))\n",
+    "    return np.mean(xF, axis=1)[:,np.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "52e28e04-27c5-45a0-a1e4-103b0e80d108",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.25454545],\n",
+       "       [0.        ],\n",
+       "       [0.        ],\n",
+       "       ...,\n",
+       "       [0.        ],\n",
+       "       [0.        ],\n",
+       "       [0.        ]], shape=(8946, 1))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fV = computeFeatures(Corpus[1],len(vocab['t_2_i']))\n",
+    "fV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec8012ff-d48d-4d86-b9e4-e18c499ed562",
+   "metadata": {},
+   "source": [
+    "## Let's classify now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f595a13a-a6f9-4ab5-81ba-583bf9fe965c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../DataSets/reviews.csv')\n",
+    "X = np.asarray(df['review'])\n",
+    "y = np.asarray(df['rating'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5706440b-fe93-4a57-a62e-c9304f30adca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c28d1a3a-2e17-4114-93d5-e35273c678ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xtrain,Xtest,ytrain,ytest = train_test_split(X,y,test_size=0.3,shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "40c21076-755b-4d32-b362-d2c6fdfcddf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocabularyFromCorpus(Xtrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7bc12d82-5174-4c2a-806c-6a857d2a1520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def corpusToFeatureMatrix(Corpus, N):\n",
+    "    isFirst = True\n",
+    "    for doc in Corpus:\n",
+    "        fV = computeFeatures(doc, N)\n",
+    "        if isFirst:\n",
+    "            fM = fV\n",
+    "            isFirst = False\n",
+    "        else:\n",
+    "            fM = np.hstack((fM, fV))\n",
+    "    return fM.T"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8253cef5-32f7-4e16-9fa1-8b423f0ca2ad",
+   "id": "644b44c8-387d-43f6-a206-8523a6d86f42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xtrain_fM = corpusToFeatureMatrix(Xtrain,len(vocab['t_2_i']))\n",
+    "Xtrain_fM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61894196-f5cd-424d-beeb-908de3ef2743",
    "metadata": {},
    "outputs": [],
    "source": []
