Classiy using different classifiers

--- a/Review Analysis.ipynb
+++ b/Review Analysis.ipynb
@@ -476,25 +476,86 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.25454545],\n",
-       "       [0.        ],\n",
-       "       [0.        ],\n",
-       "       ...,\n",
-       "       [0.        ],\n",
-       "       [0.        ],\n",
-       "       [0.        ]], shape=(8946, 1))"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140 ms ± 4.57 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "fV = computeFeatures(Corpus[1],len(vocab['t_2_i']))\n",
-    "fV"
+    "%timeit fV = computeFeatures(Corpus[1],len(vocab['t_2_i']))\n",
+    "# fV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f07b9c6e-1329-4651-9ddf-2d55d11e34e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computeFeatures_fast(doc,N):\n",
+    "    fv = np.zeros(N)\n",
+    "    numTokens = 0\n",
+    "    for token in doc:\n",
+    "        fv[lookUpToken(token)] += 1\n",
+    "        numTokens += 1\n",
+    "    return fv/numTokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "98e64eff-9e9a-4b03-b3d4-f94c47a7cff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.9 μs ± 3.1 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fV = computeFeatures_fast(Corpus[1],len(vocab['t_2_i']))\n",
+    "# fV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e85b8460-cfdf-4306-9020-b6763b4df251",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def corpusToFeatureMatrix(Corpus, N):\n",
+    "#     isFirst = True\n",
+    "#     for doc in Corpus:\n",
+    "#         fV = computeFeatures(doc, N)\n",
+    "#         if isFirst:\n",
+    "#             fM = fV\n",
+    "#             isFirst = False\n",
+    "#         else:\n",
+    "#             fM = np.hstack((fM, fV))\n",
+    "#     return fM.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "41c7e5f3-311c-42e2-abe0-a92d02aae32e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def corpusToFeatureMatrix_fast(Corpus,N):\n",
+    "    fM = np.zeros((N,len(Corpus)))\n",
+    "    i = 0\n",
+    "    for doc in Corpus:\n",
+    "        fM[:,i] = computeFeatures_fast(doc,N)\n",
+    "        i+=1\n",
+    "    return fM.T"
    ]
   },
   {
@@ -507,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "f595a13a-a6f9-4ab5-81ba-583bf9fe965c",
    "metadata": {},
    "outputs": [],
@@ -519,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "5706440b-fe93-4a57-a62e-c9304f30adca",
    "metadata": {},
    "outputs": [],
@@ -529,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "c28d1a3a-2e17-4114-93d5-e35273c678ac",
    "metadata": {},
    "outputs": [],
@@ -539,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "40c21076-755b-4d32-b362-d2c6fdfcddf3",
    "metadata": {},
    "outputs": [],
@@ -549,38 +610,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "7bc12d82-5174-4c2a-806c-6a857d2a1520",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def corpusToFeatureMatrix(Corpus, N):\n",
-    "    isFirst = True\n",
-    "    for doc in Corpus:\n",
-    "        fV = computeFeatures(doc, N)\n",
-    "        if isFirst:\n",
-    "            fM = fV\n",
-    "            isFirst = False\n",
-    "        else:\n",
-    "            fM = np.hstack((fM, fV))\n",
-    "    return fM.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "644b44c8-387d-43f6-a206-8523a6d86f42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xtrain_fM = corpusToFeatureMatrix(Xtrain,len(vocab['t_2_i']))\n",
-    "Xtrain_fM"
+    "# N = len(vocab['t_2_i'])\n",
+    "# Xtrain_fM = corpusToFeatureMatrix(Xtrain,N)\n",
+    "# Xtest_fM = corpusToFeatureMatrix(Xtest,N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7ffdb171-bc1e-41c7-9b0a-acf666e822d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = len(vocab['t_2_i'])\n",
+    "Xtrain_fM = corpusToFeatureMatrix_fast(Xtrain,N)\n",
+    "Xtest_fM = corpusToFeatureMatrix_fast(Xtest,N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "98d02ce8-5768-4397-93d4-365593ce238a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39200, 7357)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtrain_fM.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1973d691-733b-418a-9857-aa64827b1a26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16800, 7357)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtest_fM.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "249cd4b6-2b9e-43c7-8de4-763e6e40b8e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.linear_model import LogisticRegression as clf  #66.14%\n",
+    "# from sklearn.naive_bayes import GaussianNB as clf  #59.01%\n",
+    "# from sklearn.ensemble import RandomForestClassifier as clf  #66.14%\n",
+    "from sklearn.svm import SVC as clf\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "sns.set()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61894196-f5cd-424d-beeb-908de3ef2743",
+   "id": "01fbfb0b-9155-4c30-b17e-affabd75e7e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Model = clf().fit(Xtrain_fM, ytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f6ae49a-897d-4bc9-b11d-8b4e1d3e332e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = Model.predict(Xtest_fM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc7760c5-75a0-446a-8204-0bf3d0b9372d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = confusion_matrix(ytest,y_pred)\n",
+    "sns.heatmap(mat.T,square=True,annot=True,fmt='d',cbar=False,\n",
+    "           xticklabels=np.unique(y),yticklabels=np.unique(y))\n",
+    "plt.xlabel(\"True Label\")\n",
+    "plt.ylabel(\"Predicted Label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "247dbfc4-3d74-4e64-8a16-204264e30951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Model.score(Xtest_fM, ytest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aa1fd57-fad6-47ff-927c-1f0519439df4",
    "metadata": {},
    "outputs": [],
    "source": []
