--- a/BytePairEncoding.ipynb
+++ b/BytePairEncoding.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "5a2e4401-4cfb-45ee-b8fe-d87c2fd4666f",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "698a00a0-ce05-419e-9e67-46f13d97a2e4",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "{'low_': 5, 'low er _': 2, 'newest_': 6, 'w i d est_': 3, 'h a p p i er _': 2}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "0a4afa5a-481e-4957-9fc6-ab09fef72842",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        " ('e', 'r'): 9}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,8 +269,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "7dac88ec-d75c-4eb2-8466-a4e79ffce7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newWord = 'lowest'\n",
+    "newWord2 = ' '.join(list(newWord))+' _'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "41236f27-4b8d-4747-911a-1d51f5f39cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lowest\n",
+      "l o w e s t _\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(newWord)\n",
+    "print(newWord2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e1e7c6de-f498-4fc2-83f2-5db79f12acf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getAllPairs(word):\n",
+    "    pairs = []\n",
+    "    # word = list(word)\n",
+    "    # word = word.split(' ')\n",
+    "    word = list(word+'_')\n",
+    "    prevChar = word[0]\n",
+    "    for char in word[1:]:\n",
+    "        pairs.append((prevChar, char))\n",
+    "        prevChar = char\n",
+    "    return pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "71a1eae2-28f5-4c9c-bd99-a31ee59bcc9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('l', 'o'), ('o', 'w'), ('w', 'e'), ('e', 's'), ('s', 't'), ('t', '_')]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getAllPairs(newWord)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "35605b05-e107-4e70-9cda-bb8359273895",
+   "id": "738ba35c-648f-40ff-8088-ad986b045fbf",
    "metadata": {},
    "outputs": [],
    "source": []
