BPE tokenize manually using python

--- a/BytePairEncoding.ipynb
+++ b/BytePairEncoding.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bestPair = getBestPair(pairsCounts)\n",
+    "# bestPair = getBestPair(pairsCounts)\n",
     "newCorpus = mergeInCorpus(Corpus, bestPair)"
    ]
   },
@@ -275,7 +275,12 @@
    "outputs": [],
    "source": [
     "newWord = 'lowest'\n",
-    "newWord2 = ' '.join(list(newWord))+' _'"
+    "newWord2 = ' '.join(list(newWord))+' _'\n",
+    "\n",
+    "word3 = newWord2.split(' ')\n",
+    "word4 = list(newWord+'_')\n",
+    "l1 = word3[2]\n",
+    "l2 = word4[2]"
    ]
   },
   {
@@ -289,18 +294,26 @@
      "output_type": "stream",
      "text": [
       "lowest\n",
-      "l o w e s t _\n"
+      "l o w e s t _\n",
+      "['l', 'o', 'w', 'e', 's', 't', '_']\n",
+      "['l', 'o', 'w', 'e', 's', 't', '_']\n",
+      "w\n",
+      "w\n"
      ]
     }
    ],
    "source": [
     "print(newWord)\n",
-    "print(newWord2)"
+    "print(newWord2)\n",
+    "print(word3)\n",
+    "print(word4)\n",
+    "print(l1)\n",
+    "print(l2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "e1e7c6de-f498-4fc2-83f2-5db79f12acf4",
    "metadata": {},
    "outputs": [],
@@ -308,8 +321,8 @@
     "def getAllPairs(word):\n",
     "    pairs = []\n",
     "    # word = list(word)\n",
-    "    # word = word.split(' ')\n",
-    "    word = list(word+'_')\n",
+    "    word = word.split(' ') #if sent splitted word\n",
+    "    # word = list(word+'_') #if sent direct word\n",
     "    prevChar = word[0]\n",
     "    for char in word[1:]:\n",
     "        pairs.append((prevChar, char))\n",
@@ -319,8 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "71a1eae2-28f5-4c9c-bd99-a31ee59bcc9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs = getAllPairs(newWord2) #if sent splitted word\n",
+    "# pairs = getAllPairs(newWord) #if sent direct word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "34386de3-7ddd-48c7-84b9-ed082cb07cc2",
    "metadata": {},
    "outputs": [
     {
@@ -329,19 +353,140 @@
        "[('l', 'o'), ('o', 'w'), ('w', 'e'), ('e', 's'), ('s', 't'), ('t', '_')]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getAllPairs(newWord)"
+    "pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "738ba35c-648f-40ff-8088-ad986b045fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPairToBeMerged(bpeStats, pairs):\n",
+    "    # bpeCodes = []\n",
+    "    # for pair in pairs:\n",
+    "    #     if pair in bpeStats:\n",
+    "    #         bpeCodes.append((pair, bpeStats[pair]))\n",
+    "        \n",
+    "    bpeCodes = [(pair, bpeStats[pair]) for pair in pairs if pair in bpeStats]\n",
+    "    if len(bpeCodes) == 0:\n",
+    "        return (-1,-1)\n",
+    "    pairToBeMerged = min(bpeCodes, key=itemgetter(1))[0]\n",
+    "    return pairToBeMerged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a2330573-cdc1-49ab-a513-a2219e65cd79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('e', 's')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairToBeMerged = getPairToBeMerged(bpeStats, pairs)\n",
+    "pairToBeMerged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1bcd623a-3e6a-466f-b8cb-93701f184c18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergeLetters(word, pairToBeMerged):\n",
+    "    # word = ' '.join(list(word))+' _' #if sent direct word\n",
+    "    newWord = re.sub(' '.join(pairToBeMerged), ''.join(pairToBeMerged), word)\n",
+    "    return newWord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c6374b00-fc66-4bd3-be28-e0b800771c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l o w es t _'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergeLetters(newWord2, pairToBeMerged)\n",
+    "# mergeLetters(newWord, pairToBeMerged) #if sent direct word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5279d789-f4af-49ac-9702-3c210bcd6792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bpeTokenize(word, bpeStats):\n",
+    "    if len(word) == 1:\n",
+    "        return word\n",
+    "    word = ' '.join(list(word))+' _' #if sent direct word\n",
+    "\n",
+    "    while True:\n",
+    "        pairs = getAllPairs(word)\n",
+    "        pairToBeMerged = getPairToBeMerged(bpeStats, pairs)\n",
+    "        if pairToBeMerged[0] == -1:\n",
+    "            break\n",
+    "        word = mergeLetters(Word, pairToBeMerged)\n",
+    "    return word        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b21a3819-5ce3-40c0-99a1-e27bdc7935af",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Word' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbpeTokenize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlowest\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbpeStats\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[24], line 11\u001b[0m, in \u001b[0;36mbpeTokenize\u001b[1;34m(word, bpeStats)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m pairToBeMerged[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m     word \u001b[38;5;241m=\u001b[39m mergeLetters(\u001b[43mWord\u001b[49m, pairToBeMerged)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m word\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Word' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "bpeTokenize('lowest', bpeStats)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "738ba35c-648f-40ff-8088-ad986b045fbf",
+   "id": "7bcd7adb-21ae-4bbb-8801-60eb9ecc0698",
    "metadata": {},
    "outputs": [],
    "source": []
